--- a/ODK.Web.Razor/Views/Shared/Components/Scripts/_GoogleLocation.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/Scripts/_GoogleLocation.cshtml
@@ -5,5 +5,5 @@
     var apiKey = settings.GoogleMapsApiKey;
 }
 
+<script src="https://maps.googleapis.com/maps/api/js?key=@apiKey&libraries=places&v=beta"></script>
 <script src="~/js/odk.google.places.js" asp-append-version="true"></script>
-<script async src="https://maps.googleapis.com/maps/api/js?key=@apiKey&loading=async&libraries=places&callback=initMap"></script>
