--- a/ODK.Web.Razor/Pages/Account/Location.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Location.cshtml
@@ -40,7 +40,7 @@
                             DistanceUnitOptions = distanceUnitOptions,
                             Lat = location?.LatLong.Lat,
                             Long = location?.LatLong.Long,
-                            Name = location?.Name ?? "",
+                            LocationName = location?.Name ?? "",
                             TimeZoneId = member.TimeZone?.Id ?? Member.DefaultTimeZoneId
                         })
                         <button class="btn btn-primary">Update</button>
