--- a/ODK.Web.Razor/Pages/My/Groups/Create.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Create.cshtml
@@ -52,7 +52,7 @@
                     {
                         Lat = viewModel.MemberLocation?.LatLong.Lat,
                         Long = viewModel.MemberLocation?.LatLong.Long,
-                        Name = viewModel.MemberLocation?.Name ?? "",
+                        LocationName = viewModel.MemberLocation?.Name ?? "",
                         TimeZoneId = viewModel.Member.TimeZone?.Id ?? Member.DefaultTimeZoneId                        
                     },
                     TopicGroups = viewModel.TopicGroups,
