--- a/ODK.Web.Razor/Views/Shared/Account/_AccountCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountCreateForm.cshtml
@@ -32,10 +32,7 @@
             Title = "Location",
             ContentFunc = 
                 @<div>
-                    @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel
-                    {
-                        TimeZoneId = Member.DefaultTimeZoneId
-                    })
+                    @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel())
                 </div>
         },
         new WizardPageViewModel
