Create native wrapper for Google Places API (#65)
* WIP

* WIP

* WIP

* create new countries / currencies

---------

Co-authored-by: Kurt Hamilton <kurt@littlewheel.com>

--- a/ODK.Web.Razor/Pages/Account/Location.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Location.cshtml
@@ -40,8 +40,7 @@
                             DistanceUnitOptions = distanceUnitOptions,
                             Lat = location?.LatLong.Lat,
                             Long = location?.LatLong.Long,
-                            Name = location?.Name ?? "",
-                            TimeZoneId = member.TimeZone?.Id ?? Member.DefaultTimeZoneId
+                            LocationName = location?.Name ?? string.Empty
                         })
                         <button class="btn btn-primary">Update</button>
                     </form>
