--- a/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
@@ -16,14 +16,8 @@
         .ToArray();
 }
 
-<div class="form-group mb-3 required">
-    @Html.LabelFor(x => x.TimeZoneId, new { @class = "form-label" })
-    @Html.OdkTimeZoneDropDownFor(x => x.TimeZoneId, new { @class = "form-select", data_searchable = "" })
-    @Html.ValidationMessageFor(x => x.TimeZoneId)
-</div>
-
 <div class="form-group mb-3 required" data-location-container>
-    @Html.LabelFor(x => x.Name, new { @class = "form-label" })    
+    @Html.LabelFor(x => x.LocationName, new { @class = "form-label" })    
     
     @await Html.PartialAsync("Components/_LocationPicker", Model)    
     <div class="text-muted">
@@ -32,7 +26,7 @@
     <div class="text-muted">
         It is not seen by other members. It does not need to be an exact address.
     </div>
-    @Html.ValidationMessageFor(x => x.Name)
+    @Html.ValidationMessageFor(x => x.LocationName)
     <input type="hidden" id="map-latlong" data-location-latlong value="@latLong" />
 </div>
 
