--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueForm.cshtml
@@ -14,7 +14,11 @@
     @Html.TextBoxFor(x => x.Address, new { @class = "form-control" })
 </div>
 
-@await Html.PartialAsync("Components/_LocationPicker", Model)
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.LocationName, new { @class = "form-label" })
+    @await Html.PartialAsync("Components/_LocationPicker", Model)
+    @Html.ValidationMessageFor(x => x.LocationName)
+</div>
 
 <div class="my-3">
     @await Html.PartialAsync("Components/_GoogleMap", new GoogleMapViewModel
