--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -10,6 +10,8 @@
         <i class="@Model.Class fa-solid fa-arrow-circle-down"></i>break;
     case IconType.ArrowCircleUp:
         <i class="@Model.Class fa-solid fa-arrow-circle-up"></i>break;
+    case IconType.ArrowLeft:
+        <i class="@Model.Class fa-solid fa-arrow-left"></i>break;
     case IconType.ArrowsSpin:
         <i class="@Model.Class fa-solid fa-arrows-spin"></i>break;
     case IconType.Bell:
