--- a/ODK.Web.Razor/Pages/My/Groups/Events/Event/Index.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Event/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/events/{eventId:guid}"
 @using ODK.Services.Events
+@using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin
 @using ODK.Web.Razor.Models.Components
 @model IndexModel
@@ -15,6 +17,18 @@
 @await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
 {
     Title = "Edit event",
+    Breadcrumbs = new BreadcrumbsViewModel
+    {
+        Breadcrumbs = new[]
+        {
+            new MenuItem
+            {
+                Link = OdkRoutes.MemberGroups.Events(Model.Platform, viewModel.Chapter),
+                Text = "Back to events",
+                Icon = IconType.ArrowLeft
+            }
+        }
+    },
     BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Events/Event/_EventContent", viewModel)</div>,
     MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
     {
