--- a/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Venue/Events.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Events/Venues/Venue/Events.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/events/venues/{venueId:guid}/events"
 @using ODK.Services.Venues
+@using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin
 @using ODK.Web.Razor.Models.Components
 @model EventsModel
@@ -15,6 +17,18 @@
 @await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
 {
     Title = viewModel.Venue.Name,
+    Breadcrumbs = new BreadcrumbsViewModel
+    {
+        Breadcrumbs = new[]
+        {
+            new MenuItem
+            {
+                Link = OdkRoutes.MemberGroups.Venues(Model.Platform, viewModel.Chapter),
+                Text = "Back to venues",
+                Icon = IconType.ArrowLeft
+            }
+        }
+    },
     BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Venues/_VenueEventsContent", viewModel)</div>,
     MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
     {
