--- a/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_AccountMenu.cshtml
@@ -28,7 +28,9 @@
         platform == PlatformType.Default 
             ? new MenuItem { Link = OdkRoutes.Account.Location(), Text = "Location" }
             : new MenuItem(),
-        new MenuItem { Link = OdkRoutes.Account.Profile(Model.Chapter), Text = "Profile" },
+        Model.Chapter != null
+            ? new MenuItem { Link = OdkRoutes.Account.Profile(Model.Chapter), Text = "Profile" }
+            : new MenuItem(),
         Model.Chapter == null
             ? new MenuItem { Link = OdkRoutes.Account.Interests(), Text = "My interests" }
             : new MenuItem(),
