--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventHeader.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventHeader.cshtml
@@ -6,11 +6,13 @@
 @using ODK.Web.Razor.Models.Components
 @model EventAdminPageViewModelBase
 
-<h5>@Model.Event.Date.EventDate()</h5>
-<h5 class="d-flex justify-content-between">
-    <a href="@OdkRoutes.MemberGroups.Venue(Model.Platform, Model.Chapter, Model.Venue.Id)">@Model.Venue.Name</a>
-</h5>
-
-<a href="@OdkRoutes.Groups.Event(Model.Platform, Model.Chapter, Model.Event.Id)">
-    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Home)) View in site
-</a>
+<div class="d-flex flex-column flex-md-row">
+    <h5 class="d-flex flex-column flex-md-row me-md-auto gap-2">
+        <span>@Model.Event.Date.EventDate()</span>        
+        <span class="d-none d-md-block">|</span>
+        <span>@Model.Venue.Name</span>
+    </h5>
+    <a href="@OdkRoutes.Groups.Event(Model.Platform, Model.Chapter, Model.Event.Id)">
+        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Home)) View in site
+    </a>
+</div>
