--- a/ODK.Web.Razor/Pages/My/Groups/Group/Messages/Message.cshtml
+++ b/ODK.Web.Razor/Pages/My/Groups/Group/Messages/Message.cshtml
@@ -1,5 +1,7 @@
 ﻿@page "/my/groups/{id:guid}/messages/{messageId:guid}"
 @using ODK.Services.Chapters
+@using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Admin
 @using ODK.Web.Razor.Models.Components
 @model MessageModel
@@ -14,6 +16,18 @@
 @await Html.PartialAsync("Components/_TwoColLeftMenu", new TwoColLeftMenuViewModel
 {
     Title = "Message",
+    Breadcrumbs = new BreadcrumbsViewModel
+    {
+        Breadcrumbs = new[]
+        {
+            new MenuItem
+            {
+                Link = OdkRoutes.MemberGroups.GroupQuestions(Model.Platform, viewModel.Chapter),
+                Text = "Back to messages",
+                Icon = IconType.ArrowLeft
+            }
+        }
+    },
     BodyContentFunc = @<div>@await Html.PartialAsync("Admin/Chapter/_MessageContent", viewModel)</div>,
     MenuContentFunc = _ => Html.PartialAsync("Admin/_AdminSideMenu", new AdminSideMenuViewModel
     {
