--- a/ODK.Web.Razor/wwwroot/css/_header.scss
+++ b/ODK.Web.Razor/wwwroot/css/_header.scss
@@ -1,8 +1,3 @@
-:root {
-    --bg-section-header: #FF0000;
-    --color-section-header: #FFF;
-}
-
 .site-logo {
     height: 40px;
 }
@@ -13,7 +8,10 @@
 }
 
 .section--header {
-	color: var(--color-section-header);
+    --bg-section-header: var(--theme-bg, #FF0000);
+    --color-section-header: var(--theme-color, #FFF);
+
+    color: var(--color-section-header);
     background-color: var(--bg-section-header);
 
     h1 {
