--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12337,11 +12337,6 @@ html[data-platform=odk] {
   font-weight: 700;
 }
 
-:root {
-  --bg-section-header: #FF0000;
-  --color-section-header: #FFF;
-}
-
 .site-logo {
   height: 40px;
 }
@@ -12352,6 +12347,8 @@ html[data-platform=odk] {
 }
 
 .section--header {
+  --bg-section-header: var(--theme-bg, #FF0000);
+  --color-section-header: var(--theme-color, #FFF);
   color: var(--color-section-header);
   background-color: var(--bg-section-header);
 }
@@ -13028,20 +13025,6 @@ th.sortable.sort-desc:after {
 
 .StripeElement--webkit-autofill {
   background-color: #fefde5 !important;
-}
-
-.chapter-theme--dublin {
-  --bg-section-header: #23DA40;
-  --color-section-header: #000;
-}
-
-.chapter-theme--manchester {
-  --bg-section-header: #F3D402;
-  --color-section-header: #000;
-}
-
-.chapter-theme--oxford {
-  --bg-section-header: #e03034;
 }
 
 .bg-level-1 {
