--- a/ODK.Web.Razor/Views/Shared/Feedback/_Feedback.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Feedback/_Feedback.cshtml
@@ -1,5 +1,4 @@
-﻿@using Newtonsoft.Json
-@using ODK.Web.Common.Feedback
+﻿@using ODK.Web.Common.Feedback
 @{
     if (!int.TryParse(TempData["FeedbackCount"]?.ToString(), out int feedbackCount))
     {
@@ -13,9 +12,9 @@
     FeedbackType type = Enum.Parse<FeedbackType>(TempData[$"Feedback[{i}].Type"]?.ToString() ?? string.Empty, true);
 
     <div class="alert 
-                @(type == FeedbackType.Success ? "alert-success" : null)
-                @(type == FeedbackType.Warning ? "alert-warning" : null)
-                @(type == FeedbackType.Error ? "alert-danger" : null)">
+        @(type == FeedbackType.Success ? "alert-success" : null)
+        @(type == FeedbackType.Warning ? "alert-warning" : null)
+        @(type == FeedbackType.Error ? "alert-danger" : null)">
         @message
     </div>
 }
